--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -1,9 +1,17 @@
 import { serverSideTranslations } from 'next-i18next/serverSideTranslations';
+
 import { NestedLayout } from '@/components/layout/NestedLayout';
 import ComponentExample from '@/components/layout/ComponentExample';
 import { Code } from '@/components/layout/Code';
 import { PrevAndNext } from '@/components/layout/PrevAndNext';
 import { SidebarLink } from '@/components/layout/SidebarLink';
+
+import { Default } from '@/components/docs/components/button/Default';
+import { Border } from '@/components/docs/components/button/Border';
+import { Gradient } from '@/components/docs/components/button/Gradient';
+import { Transparent } from '@/components/docs/components/button/Transparent';
+import { LoadingA } from '@/components/docs/components/button/LoadingA';
+import { LoadingB } from '@/components/docs/components/button/LoadingB';
 
 export const meta = {
   name: 'Button',
@@ -22,6 +30,21 @@ export const getStaticProps = async ({ locale }) => {
   <a href="#default" className="sidebar__link">
     Default
   </a>
+  <a href="#border" className="sidebar__link">
+    Border
+  </a>
+  <a href="#gradient" className="sidebar__link">
+    Gradient
+  </a>
+  <a href="#transparent" className="sidebar__link">
+    Transparent
+  </a>
+  <a href="#loadinga" className="sidebar__link">
+    Loading A
+  </a>
+  <a href="#loadingb" className="sidebar__link">
+    Loading B
+  </a>
 </SidebarLink>
 
 <PrevAndNext leftPath="/docs/theme" rightPath="/docs/components/alert" />
@@ -29,39 +52,238 @@ export const getStaticProps = async ({ locale }) => {
 <div id="default"></div>
 
 <ComponentExample name="Default" paragraph="This is a paragraph">
-
-  <button className="btn btn__primary">Click</button>
-  <button className="btn btn__primary">Click</button>
-  <button className="btn btn__primary">Click</button>
-  
+  <Default />
 </ComponentExample>
 
 <Code>
 ```jsx
-import React from 'react';
-import { MdOutlineContentCopy, MdCode, MdCodeOff } from 'react-icons/md';
+import React, { useState } from 'react';
 
-const ComponentExample = ({ children }) => {
+export const Default = () => {
+  const [active, setActive] = useState(true);
+
+const button =
+'w-fit mx-auto rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] dark:bg-[#1a5cff] md:text-sm text-white hover:shadow-md hover:shadow-blue-500/50 ';
+
+const disabledButton =
+'w-fit mx-auto rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] dark:bg-[#1a5cff] md:text-sm text-white ';
+
 return (
 
-<div>
-  <div className="relative rounded-t-lg rounded-b-2xl bg-white dark:bg-darkPrimary pt-4 pb-10 md:pb-16 flex justify-center">
-    <div className="space-x-2 select-none">{children}</div>
-    <div className="absolute bottom-2 left-1/2 transform -translate-x-1/2 flex items-center space-x-2">
-      <MdOutlineContentCopy className="hover:opacity-75 cursor-pointer text-primary dark:text-white" />
-      <MdCode className="hover:opacity-75 cursor-pointer text-primary dark:text-white" />
-    </div>
-  </div>
+<div className="flex items-center space-x-3">
+  <button
+    onClick={() => setActive(true)}
+    className={
+      active ? button + '-translate-y-1 shadow-md shadow-blue-500/50' : button
+    }>
+    Active
+  </button>
+  <button
+    onClick={() => setActive(false)}
+    className={
+      active ? button : button + '-translate-y-1 shadow-md shadow-blue-500/50'
+    }>
+    Default
+  </button>
+  <button className={disabledButton + 'opacity-50 cursor-auto select-none'}>
+    Disabled
+  </button>
 </div>
-); };
+);
 
-export default ComponentExample;
-```
+````
 </Code>
 
-<div className="h-screen"></div>
-export default ({children}) => <NestedLayout
-  name={meta.name}
-  title={meta.title}>
-  {children}
-</NestedLayout>;
+<div id="border"></div>
+
+<ComponentExample name="Border" paragraph="This is a paragraph">
+  <Border />
+</ComponentExample>
+
+<Code>
+```jsx
+import React, { useState } from 'react';
+
+export const Default = () => {
+  const [active, setActive] = useState(true);
+
+  const button =
+    'w-fit mx-auto rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] dark:bg-[#1a5cff] md:text-sm text-white hover:shadow-md hover:shadow-blue-600 ';
+
+  const disabledButton =
+    'w-fit mx-auto rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] dark:bg-[#1a5cff] md:text-sm text-white ';
+
+  return (
+    <div className="flex items-center space-x-3">
+      <button
+        onClick={() => setActive(true)}
+        className={active ? button + '-translate-y-1' : button}>
+        Active
+      </button>
+      <button
+        onClick={() => setActive(false)}
+        className={active ? button : button + '-translate-y-1'}>
+        Default
+      </button>
+      <button className={disabledButton + 'opacity-50 cursor-auto select-none'}>
+        Default
+      </button>
+    </div>
+  );
+};
+````
+
+</Code>
+
+<div id="gradient"></div>
+
+<ComponentExample name="Gradient" paragraph="This is a paragraph">
+  <Gradient />
+</ComponentExample>
+
+<Code>
+```jsx
+import React, { useState } from 'react';
+
+export const Gradient = () => {
+  const [active, setActive] = useState(true);
+
+const button =
+'w-fit mx-auto rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-gradient-to-r from-[#1a5cff] via-purple-500 to-pink-500 md:text-sm text-white hover:shadow-md hover:shadow-blue-500/50 ';
+
+const disabledButton =
+'w-fit mx-auto rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-gradient-to-r from-[#1a5cff] via-purple-500 to-pink-500 md:text-sm text-white ';
+
+return (
+<div className="flex items-center space-x-3">
+<button
+onClick={() => setActive(true)}
+className={active ? button + '-translate-y-1 shadow-md shadow-blue-500/50' : button}>
+Active
+</button>
+<button
+onClick={() => setActive(false)}
+className={active ? button : button + '-translate-y-1 shadow-md shadow-blue-500/50'}>
+Default
+</button>
+<button className={disabledButton + 'opacity-50 cursor-auto select-none'}>
+Disabled
+</button>
+</div>
+);
+};
+
+````
+</Code>
+
+<div id="transparent" />
+
+<ComponentExample name="Transparent" paragraph="This is a paragraph">
+  <Transparent />
+</ComponentExample>
+
+<Code>
+```jsx
+import React, { useState } from 'react';
+
+export const Gradient = () => {
+  const [active, setActive] = useState(true);
+
+  const button =
+    'w-fit mx-auto rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-gradient-to-r from-[#1a5cff] via-purple-500 to-pink-500 md:text-sm text-white hover:shadow-md hover:shadow-blue-500/50 ';
+
+  const disabledButton =
+    'w-fit mx-auto rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-gradient-to-r from-[#1a5cff] via-purple-500 to-pink-500 md:text-sm text-white ';
+
+  return (
+    <div className="flex items-center space-x-3">
+      <button
+        onClick={() => setActive(true)}
+        className={active ? button + '-translate-y-1 shadow-md shadow-blue-500/50' : button}>
+        Active
+      </button>
+      <button
+        onClick={() => setActive(false)}
+        className={active ? button : button + '-translate-y-1 shadow-md shadow-blue-500/50'}>
+        Default
+      </button>
+      <button className={disabledButton + 'opacity-50 cursor-auto select-none'}>
+        Disabled
+      </button>
+    </div>
+  );
+};
+````
+
+</Code>
+
+<div id="loadinga"></div>
+
+<ComponentExample name="Loading A" paragraph="This is a paragraph">
+  <LoadingA />
+</ComponentExample>
+
+<Code>
+```jsx
+import React, { useState } from 'react';
+
+export const Loading = () => {
+  const [active, setActive] = useState(true);
+
+const button =
+'w-fit flex items-center space-x-2 mx-auto rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] dark:bg-[#1a5cff] md:text-sm text-white hover:shadow-md hover:shadow-blue-500/50 ';
+
+const disabledButton =
+'w-fit flex items-center space-x-2 mx-auto rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] dark:bg-[#1a5cff] md:text-sm text-white ';
+
+return (
+<div className="flex items-center space-x-3">
+<button
+onClick={() => setActive(true)}
+className={
+active
+? button + '-translate-y-1 shadow-md shadow-blue-500/50'
+: button
+}>
+<span className="w-[15px] h-[15px] rounded-full border-[2px] border-transparent border-r-white animate-spin" />
+<p>Active</p>
+</button>
+<button
+onClick={() => setActive(false)}
+className={
+active
+? button
+: button + '-translate-y-1 shadow-md shadow-blue-500/50'
+}>
+<span className="w-[15px] h-[15px] rounded-full border-[2px] border-transparent border-r-white animate-spin" />
+<p>Default</p>
+</button>
+<button className={disabledButton + 'opacity-50 cursor-auto select-none'}>
+<span className="w-[15px] h-[15px] rounded-full border-[2px] border-transparent border-r-white animate-spin" />
+<p>Disabled</p>
+</button>
+</div>
+);
+};
+
+````
+</Code>
+
+<div id="loadingb"></div>
+
+<ComponentExample name="Loading B" paragraph="This is a paragraph">
+  <LoadingB />
+</ComponentExample>
+
+<Code>
+```jsx
+
+````
+
+</Code>
+
+export default ({ children }) => (
+  <NestedLayout name={meta.name} title={meta.title}>
+    {children}
+  </NestedLayout>
+);
