--- a/pages/docs/components/loading.mdx
+++ b/pages/docs/components/loading.mdx
@@ -1,7 +1,12 @@
 import { serverSideTranslations } from 'next-i18next/serverSideTranslations';
 
 import { NestedLayout } from '@/components/layout/NestedLayout';
+import ComponentExample from '@/components/layout/ComponentExample';
+import { Code } from '@/components/layout/Code';
 import { PrevAndNext } from '@/components/layout/PrevAndNext';
+import { SidebarLink } from '@/components/layout/SidebarLink';
+
+import { Default } from '@/components/docs/components/loading/Default';
 
 export const meta = {
   name: 'Loading',
@@ -16,9 +21,36 @@ export const getStaticProps = async ({ locale }) => {
   };
 };
 
-<PrevAndNext leftPath="/docs/components/alert" rightPath="/docs/components/input" />
+<SidebarLink>
+  <a href="#default" className="sidebar__link">
+    Default
+  </a>
+</SidebarLink>
 
-<div className="h-screen"></div>
+<PrevAndNext
+  leftPath="/docs/components/alert"
+  rightPath="/docs/components/input"
+/>
+
+<div id="default"></div>
+
+<ComponentExample name="Default" paragraph="This is a paragraph">
+  <Default />
+</ComponentExample>
+
+<Code>
+```jsx
+import React from 'react';
+
+export const Default = () => {
+  return (
+    <>
+      <div className="w-[40px] h-[40px] rounded-full border-[3px] border-transparent border-r-[#474bff] animate-spin" />
+    </>
+  );
+};
+```
+</Code>
 
 export default ({ children }) => (
   <NestedLayout name={meta.name} title={meta.title}>
@@ -26,3 +58,6 @@ export default ({ children }) => (
   </NestedLayout>
 );
 
+```
+
+```
