--- a/pages/docs/components/tag-input.mdx
+++ b/pages/docs/components/tag-input.mdx
@@ -1,3 +1,4 @@
+import { serverSideTranslations } from 'next-i18next/serverSideTranslations';
 import { NestedLayout } from '@/components/layout/NestedLayout';
 import ComponentExample from '@/components/layout/ComponentExample';
 import { Code } from '@/components/layout/Code';
@@ -6,6 +7,14 @@ import { PrevAndNext } from '@/components/layout/PrevAndNext';
 export const meta = {
   name: 'Button',
   title: 'Button | Lazydev ui components',
+};
+
+export const getStaticProps = async ({ locale }) => {
+  return {
+    props: {
+      ...(await serverSideTranslations(locale, ['home'])),
+    },
+  };
 };
 
 
