--- a/pages/docs/components/input.mdx
+++ b/pages/docs/components/input.mdx
@@ -1,3 +1,4 @@
+import { serverSideTranslations } from 'next-i18next/serverSideTranslations';
 
 import ComponentExample from '@/components/layout/ComponentExample';
 import { Code } from '@/components/layout/Code';
@@ -13,6 +14,14 @@ import { Color } from '@/components/docs/components/input/Color';
 export const meta = {
   name: 'Input',
   title: 'Input | Lazydev ui components',
+};
+
+export const getStaticProps = async ({ locale }) => {
+  return {
+    props: {
+      ...(await serverSideTranslations(locale, ['home'])),
+    },
+  };
 };
 
 <SidebarLink>
