--- a/pages/docs/components/toast.mdx
+++ b/pages/docs/components/toast.mdx
@@ -1,3 +1,4 @@
+import { serverSideTranslations } from 'next-i18next/serverSideTranslations';
 
 import ComponentExample from '@/components/layout/ComponentExample';
 import { Code } from '@/components/layout/Code';
@@ -17,6 +18,13 @@ export const meta = {
   title: 'Toast | Lazydev ui components',
 };
 
+export const getStaticProps = async ({ locale }) => {
+  return {
+    props: {
+      ...(await serverSideTranslations(locale, ['home'])),
+    },
+  };
+};
 
 <SidebarLink>
   <a href="#default1" className="text-right">
