--- a/pages/docs/components/tooltip.mdx
+++ b/pages/docs/components/tooltip.mdx
@@ -1,3 +1,4 @@
+import { serverSideTranslations } from 'next-i18next/serverSideTranslations';
 
 import { NestedLayout } from '@/components/layout/NestedLayout';
 import { PrevAndNext } from '@/components/layout/PrevAndNext';
@@ -5,6 +6,14 @@ import { PrevAndNext } from '@/components/layout/PrevAndNext';
 export const meta = {
   name: 'Tooltip',
   title: 'Tooltip | Lazydev ui components',
+};
+
+export const getStaticProps = async ({ locale }) => {
+  return {
+    props: {
+      ...(await serverSideTranslations(locale, ['home'])),
+    },
+  };
 };
 
 <PrevAndNext leftPath="/docs/components/avatar" rightPath="/docs/components/dialog" />
