Changed some classnames for mobile && Adde new components

--- a/pages/docs/components/alert.mdx
+++ b/pages/docs/components/alert.mdx
@@ -113,7 +113,7 @@ export const Solid = () => {
     </>
   );
 };
-````
+````;
 
 </Code>
 
@@ -175,15 +175,13 @@ import { MdOutlineDone, MdClose } from 'react-icons/md';
 export const Icon = () => {
   return (
     <>
-      <div className="p-4 rounded-lg bg-white shadow-lg w-[20rem] md:w-[25rem] my-2">
+      <div className="p-4 rounded-lg bg-white shadow-lg w-[15rem] md:w-[25rem] my-2">
         <div className="flex items-center justify-between">
           <div className="flex items-center">
             <div className="w-7 h-7 flex items-center justify-center rounded-full mr-3">
               <MdOutlineDone className="" text-green-500 />
             </div>
-            <h4 className="text-gray-700 font-semibold">
-              Uploaded Successful
-            </h4>
+            <h4 className="text-gray-700 font-semibold">Uploaded Successful</h4>
           </div>
           <div>
             <MdClose className="text-gray-700 text-lg" />
@@ -229,7 +227,7 @@ import { MdOutlineDone, MdClose } from 'react-icons/md';
 export const IconWithButton = () => {
   return (
     <>
-      <div className="p-4 rounded-lg bg-white shadow-lg w-[20rem] md:w-[25rem] my-2">
+      <div className="p-4 rounded-lg bg-white shadow-lg w-[15rem] md:w-[25rem] my-2">
         <div className="flex items-center justify-between">
           <div className="flex items-center">
             <div className="w-7 h-7 flex items-center justify-center rounded-full mr-3">
