--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -155,23 +155,27 @@ const disabledButton =
 'w-fit mx-auto rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-gradient-to-r from-[#1a5cff] via-purple-500 to-pink-500 md:text-sm text-white ';
 
 return (
+
 <div className="flex items-center space-x-3">
-<button
-onClick={() => setActive(true)}
-className={active ? button + '-translate-y-1 shadow-md shadow-blue-500/50' : button}>
-Active
-</button>
-<button
-onClick={() => setActive(false)}
-className={active ? button : button + '-translate-y-1 shadow-md shadow-blue-500/50'}>
-Default
-</button>
-<button className={disabledButton + 'opacity-50 cursor-auto select-none'}>
-Disabled
-</button>
+  <button
+    onClick={() => setActive(true)}
+    className={
+      active ? button + '-translate-y-1 shadow-md shadow-blue-500/50' : button
+    }>
+    Active
+  </button>
+  <button
+    onClick={() => setActive(false)}
+    className={
+      active ? button : button + '-translate-y-1 shadow-md shadow-blue-500/50'
+    }>
+    Default
+  </button>
+  <button className={disabledButton + 'opacity-50 cursor-auto select-none'}>
+    Disabled
+  </button>
 </div>
-);
-};
+); };
 
 ````
 </Code>
@@ -237,49 +241,32 @@ const disabledButton =
 'w-fit flex items-center space-x-2 mx-auto rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] dark:bg-[#1a5cff] md:text-sm text-white ';
 
 return (
+
 <div className="flex items-center space-x-3">
-<button
-onClick={() => setActive(true)}
-className={
-active
-? button + '-translate-y-1 shadow-md shadow-blue-500/50'
-: button
-}>
-<span className="w-[15px] h-[15px] rounded-full border-[2px] border-transparent border-r-white animate-spin" />
-<p>Active</p>
-</button>
-<button
-onClick={() => setActive(false)}
-className={
-active
-? button
-: button + '-translate-y-1 shadow-md shadow-blue-500/50'
-}>
-<span className="w-[15px] h-[15px] rounded-full border-[2px] border-transparent border-r-white animate-spin" />
-<p>Default</p>
-</button>
-<button className={disabledButton + 'opacity-50 cursor-auto select-none'}>
-<span className="w-[15px] h-[15px] rounded-full border-[2px] border-transparent border-r-white animate-spin" />
-<p>Disabled</p>
-</button>
+  <button
+    onClick={() => setActive(true)}
+    className={
+      active ? button + '-translate-y-1 shadow-md shadow-blue-500/50' : button
+    }>
+    <span className="w-[15px] h-[15px] rounded-full border-[2px] border-transparent border-r-white animate-spin" />
+    <p>Active</p>
+  </button>
+  <button
+    onClick={() => setActive(false)}
+    className={
+      active ? button : button + '-translate-y-1 shadow-md shadow-blue-500/50'
+    }>
+    <span className="w-[15px] h-[15px] rounded-full border-[2px] border-transparent border-r-white animate-spin" />
+    <p>Default</p>
+  </button>
+  <button className={disabledButton + 'opacity-50 cursor-auto select-none'}>
+    <span className="w-[15px] h-[15px] rounded-full border-[2px] border-transparent border-r-white animate-spin" />
+    <p>Disabled</p>
+  </button>
 </div>
-);
-};
+); };
 
 ````
-</Code>
-
-<div id="loadingb"></div>
-
-<ComponentExample name="Loading B" paragraph="This is a paragraph">
-  <LoadingB />
-</ComponentExample>
-
-<Code>
-```jsx
-
-````
-
 </Code>
 
 export default ({ children }) => (
