--- a/pages/docs/components/dialog.mdx
+++ b/pages/docs/components/dialog.mdx
@@ -7,6 +7,8 @@ import { NestedLayout } from '@/components/layout/NestedLayout';
 import { PrevAndNext } from '@/components/layout/PrevAndNext';
 
 import { TypeA } from '@/components/docs/components/dialog/TypeA';
+import { TypeB } from '@/components/docs/components/dialog/TypeB';
+import { TypeC } from '@/components/docs/components/dialog/TypeC';
 
 export const meta = {
   name: 'Dialog',
@@ -28,9 +30,15 @@ export const getStaticProps = async ({ locale }) => {
   <a href="#typeb" className="text-right">
     Type B
   </a>
+   <a href="#typec" className="text-right">
+    Type C
+  </a>
 </SidebarLink>
 
-<PrevAndNext leftPath="/docs/components/tooltip" rightPath="/docs/components/pagination" />
+<PrevAndNext
+  leftPath="/docs/components/tooltip"
+  rightPath="/docs/components/pagination"
+/>
 
 <div id="typea" />
 
@@ -48,6 +56,79 @@ import { GrFormClose } from 'react-icons/gr';
 export const TypeA = () => {
   const [activeDialog, setActiveDialog] = useState(false);
 
+const dialog = () => {
+setActiveDialog(true);
+};
+
+const CloseDialog = () => {
+setActiveDialog(false);
+};
+
+const defaultButton =
+'rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] md:text-sm text-white hover:shadow-md hover:shadow-blue-500/50 ';
+
+const buttonBorder =
+'rounded-xl py-2 px-4 shadow-md text-sm duration-300 border border-[#1a5cff] active:bg-opacity-80 ease-in-out bg-transparent md:text-sm text-[#1a5cff] ';
+
+const buttonTransparent =
+'rounded-xl py-2 px-4 shadow-md text-sm duration-300 ease-in-out bg-blue-500 bg-opacity-30 md:text-sm text-[#1a5cff] ';
+
+return (
+<>
+  <div
+    className={
+      activeDialog
+        ? 'fixed top-0 left-0 right-0 bottom-0 flex items-center justify-center bg-black bg-opacity-50 '
+        : 'hidden'
+    }>
+    <div className="relative w-[15rem] md:w-[25rem] p-6 bg-white shadow-lg rounded-xl">
+      <div
+        onClick={CloseDialog}
+        className="absolute -top-1 -right-1 hover:top-0 hover:right-0 p-1.5 rounded-lg bg-white shadow-lg cursor-pointer duration-200">
+        <GrFormClose className="text-primary" />
+      </div>
+      <img
+        className="mx-auto w-28 mb-2"
+        src="https://media0.giphy.com/media/v8Vux9WxXcnXEnOGn1/giphy.gif?cid=ecf05e47zn1myog0zrkd309o2vq605ztag8vqqu9v1zguc7t&rid=giphy.gif&ct=s"
+        alt=""
+      />
+      <div className="space-y-1 text-center text-primary">
+        <h3 className="text-lg font-semibold">
+          This is a Type A dialog example!
+        </h3>
+        <p className="text-sm">Save a code or copy and paste your project. </p>
+      </div>
+      <div className="flex items-center justify-center space-x-2 mt-4">
+        <button className={buttonBorder}>Take code</button>
+        <button className={buttonTransparent}>Scan pages</button>
+      </div>
+    </div>
+  </div>
+  <button onClick={dialog} className={defaultButton}>
+    Open Dialog
+  </button>
+</>
+);
+```
+</Code>
+
+
+<div id="typeb" />
+
+<ComponentExample
+  name="Type B"
+  paragraph="Ranglar va ikonkalar ixtiyoriy! O'zingizga ma'qul rangni qo'llashingiz mumkin. Kodni olmoqchi bo'sangiz Show code tugmasini bosing">
+  <TypeB />
+</ComponentExample>
+
+<Code>
+```jsx
+import React, { useState } from 'react';
+import { GrFormClose } from 'react-icons/gr';
+
+export const TypeB= () => {
+  const [activeDialog, setActiveDialog] = useState(false);
+
   const dialog = () => {
     setActiveDialog(true);
   };
@@ -57,13 +138,9 @@ export const TypeA = () => {
   };
 
   const defaultButton =
-    'rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] dark:bg-[#1a5cff] md:text-sm text-white hover:shadow-md hover:shadow-blue-500/50 ';
+    'rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] md:text-sm text-white hover:shadow-md hover:shadow-blue-500/50 ';
 
-  const buttonBorder =
-    'rounded-xl py-2 px-4 shadow-md text-sm duration-300 border border-[#1a5cff] active:bg-opacity-80 ease-in-out bg-transparent md:text-sm text-[#1a5cff] ';
-
-  const buttonTransparent =
-    'rounded-xl py-2 px-4 shadow-md text-sm duration-300 ease-in-out bg-blue-500 bg-opacity-30 md:text-sm text-[#1a5cff] ';
+  const emojiStyle = 'text-xl md:text-2xl p-2 bg-pink-100 rounded-lg hover:bg-pink-200 cursor-pointer '
 
   return (
     <>
@@ -73,28 +150,19 @@ export const TypeA = () => {
             ? 'fixed top-0 left-0 right-0 bottom-0 flex items-center justify-center bg-black bg-opacity-50 '
             : 'hidden'
         }>
-        <div className="relative w-[20rem] md:w-[25rem] p-6 bg-white dark:bg-darkPrimary shadow-lg rounded-xl">
-          <div
-            onClick={CloseDialog}
-            className="absolute -top-1 -right-1 hover:top-0 hover:right-0 p-1.5 rounded-lg bg-white dark:bg-darkPrimary shadow-lg cursor-pointer duration-200">
-            <GrFormClose className="text-primary dark:text-white" />
+        <div className="relative w-[15rem] md:w-[25rem] p-6 bg-white shadow-lg rounded-xl space-y-2">
+          <div className='flex items-center justify-between'>
+            <h4 className='text-sm md:text-base font-semibold'>Question*</h4>
+            <GrFormClose onClick={CloseDialog} className='cursor-pointer' />
           </div>
-          <img
-            className="mx-auto w-28 mb-2"
-            src="https://media0.giphy.com/media/v8Vux9WxXcnXEnOGn1/giphy.gif?cid=ecf05e47zn1myog0zrkd309o2vq605ztag8vqqu9v1zguc7t&rid=giphy.gif&ct=s"
-            alt=""
-          />
-          <div className="space-y-1 text-center text-primary dark:text-white">
-            <h3 className="text-lg font-semibold">
-              This is a Type A dialog example!
-            </h3>
-            <p className="text-sm">
-              Save a code or copy and paste your project.{' '}
-            </p>
-          </div>
-          <div className="flex items-center justify-center space-x-2 mt-4">
-            <button className={buttonBorder}>Take code</button>
-            <button className={buttonTransparent}>Scan pages</button>
+          <p>How would you rate this ui?*</p>
+          <div className='flex items-center justify-between'>
+            <span className={emojiStyle}>🥴</span>
+            <span className={emojiStyle}>😕</span>
+            <span className={emojiStyle}>🙃</span>
+            <span className={emojiStyle}>🙂</span>
+            <span className={emojiStyle}>😇</span>
+            <span className={emojiStyle}>😍</span>
           </div>
         </div>
       </div>
@@ -107,9 +175,116 @@ export const TypeA = () => {
 ```
 </Code>
 
+<div id="typec" />
+
+<ComponentExample
+  name="Type C | Login"
+  paragraph="Ranglar va ikonkalar ixtiyoriy! O'zingizga ma'qul rangni qo'llashingiz mumkin. Kodni olmoqchi bo'sangiz Show code tugmasini bosing">
+  <TypeC />
+</ComponentExample>
+
+<Code>
+```jsx
+import React, { useState } from 'react';
+import { GrFormClose } from 'react-icons/gr';
+import { BiUser, BiLockOpenAlt } from 'react-icons/bi';
+
+export const TypeC = () => {
+  const [activeDialog, setActiveDialog] = useState(false);
+
+  const dialog = () => {
+    setActiveDialog(true);
+  };
+
+  const CloseDialog = () => {
+    setActiveDialog(false);
+  };
+
+  const defaultButton =
+    'w-full rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] md:text-sm text-white hover:shadow-md hover:shadow-blue-500/50 ';
+
+  return (
+    <>
+      <div
+        className={
+          activeDialog
+            ? 'fixed top-0 left-0 right-0 bottom-0 flex items-center justify-center bg-black bg-opacity-50 '
+            : 'hidden'
+        }>
+        <div className="relative w-[15rem] md:w-[25rem] p-6 bg-white shadow-lg rounded-xl">
+          <div
+            onClick={CloseDialog}
+            className="absolute -top-1 -right-1 hover:top-0 hover:right-0 p-1.5 rounded-lg bg-white shadow-lg cursor-pointer duration-200">
+            <GrFormClose className="text-primary]" />
+          </div>
+          <div className="space-y-2 md:space-y-4">
+            <h3 className="text-sm md:text-base font-semibold text-center">
+              Welcome to Lazydev!
+            </h3>
+            <div className="relative flex items-center rounded-xl bg-gray-200 group">
+              <input
+                id="username"
+                className="outline-none flex flex-grow p-3 bg-transparent rounded-l-xl px-4 text-xs duration-300"
+                type="text"
+                placeholder="username"
+              />
+              <div className="absolute top-0 right-0 duration-300 rounded-xl bg-transparent p-2 group-focus-within:-top-2 group-focus-within:-right-2 group-focus-within:bg-[#18191c]">
+                <BiUser className="text-primary group-focus-within:text-white" />
+              </div>
+            </div>
+            <div className="relative flex items-center rounded-xl bg-gray-200 group">
+              <input
+                id="password"
+                className="outline-none flex flex-grow p-3 bg-transparent rounded-l-xl px-4 text-xs duration-300"
+                type="password"
+                placeholder="password"
+              />
+              <div className="absolute top-0 right-0 duration-300 rounded-xl bg-transparent p-2 group-focus-within:-top-2 group-focus-within:-right-2 group-focus-within:bg-[#18191c]">
+                <BiLockOpenAlt className="text-primary group-focus-within:text-white" />
+              </div>
+            </div>
+            <div className="flex items-center justify-between">
+              <div className="flex items-center space-x-2">
+                <input
+                  id="remember"
+                  type="checkbox"
+                  className="w-4 h-4 border border-gray-300 rounded-lg bg-gray-50 focus:ring-3 focus:ring-blue-500"
+                  required
+                />
+                <small className="text-blue-500 cursor-pointer">
+                  Remember me
+                </small>
+              </div>
+              <small className="text-gray-500 cursor-pointer">
+                Forgot password?
+              </small>
+            </div>
+            <button className={defaultButton}>Sign In</button>
+            <span className="flex items-center space-x-1 w-fit mx-auto">
+              <p className="text-xs">New here?</p>
+              <a
+                className="text-xs text-blue-600 active:text-blue-400"
+                href="#!">
+                Create new Account
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+      <button onClick={dialog} className={defaultButton}>
+        Open Dialog
+      </button>
+    </>
+  );
+};
+
+```
+</Code>
+
 export default ({ children }) => (
   <NestedLayout name={meta.name} title={meta.title}>
     {children}
   </NestedLayout>
 );
 
+```
