--- a/pages/docs/components/navbar.mdx
+++ b/pages/docs/components/navbar.mdx
@@ -1,7 +1,12 @@
 import { serverSideTranslations } from 'next-i18next/serverSideTranslations';
 
 import { NestedLayout } from '@/components/layout/NestedLayout';
+import ComponentExample from '@/components/layout/ComponentExample';
+import { Code } from '@/components/layout/Code';
 import { PrevAndNext } from '@/components/layout/PrevAndNext';
+import { SidebarLink } from '@/components/layout/SidebarLink';
+
+import { Test } from '@/components/docs/components/navbar/Test';
 
 export const meta = {
   name: 'Navbar',
@@ -16,13 +21,16 @@ export const getStaticProps = async ({ locale }) => {
   };
 };
 
-<PrevAndNext leftPath="/docs/components/pagination" rightPath="/docs/components/sidebar" />
+<PrevAndNext
+  leftPath="/docs/components/pagination"
+  rightPath="/docs/components/sidebar"
+/>
 
-<div className="h-screen"></div>
+
+<Test />
 
 export default ({ children }) => (
   <NestedLayout name={meta.name} title={meta.title}>
     {children}
   </NestedLayout>
 );
-
