--- a/pages/docs/components/dialog.mdx
+++ b/pages/docs/components/dialog.mdx
@@ -9,6 +9,7 @@ import { PrevAndNext } from '@/components/layout/PrevAndNext';
 import { TypeA } from '@/components/docs/components/dialog/TypeA';
 import { TypeB } from '@/components/docs/components/dialog/TypeB';
 import { TypeC } from '@/components/docs/components/dialog/TypeC';
+import { TypeD } from '@/components/docs/components/dialog/TypeD';
 
 export const meta = {
   name: 'Dialog',
@@ -24,14 +25,17 @@ export const getStaticProps = async ({ locale }) => {
 };
 
 <SidebarLink>
-  <a href="#typea" className="text-right">
+  <a href="#type-a" className="text-right">
     Type A
   </a>
-  <a href="#typeb" className="text-right">
+  <a href="#type-b" className="text-right">
     Type B
   </a>
-   <a href="#typec" className="text-right">
+  <a href="#type-c" className="text-right">
     Type C
+  </a>
+  <a href="#type-d" className="text-right">
+    Type D
   </a>
 </SidebarLink>
 
@@ -40,7 +44,7 @@ export const getStaticProps = async ({ locale }) => {
   rightPath="/docs/components/pagination"
 />
 
-<div id="typea" />
+<div id="type-a" />
 
 <ComponentExample
   name="Type A"
@@ -74,6 +78,7 @@ const buttonTransparent =
 'rounded-xl py-2 px-4 shadow-md text-sm duration-300 ease-in-out bg-blue-500 bg-opacity-30 md:text-sm text-[#1a5cff] ';
 
 return (
+
 <>
   <div
     className={
@@ -112,8 +117,7 @@ return (
 ```
 </Code>
 
-
-<div id="typeb" />
+<div id="type-b" />
 
 <ComponentExample
   name="Type B"
@@ -129,53 +133,54 @@ import { GrFormClose } from 'react-icons/gr';
 export const TypeB= () => {
   const [activeDialog, setActiveDialog] = useState(false);
 
-  const dialog = () => {
-    setActiveDialog(true);
-  };
-
-  const CloseDialog = () => {
-    setActiveDialog(false);
-  };
-
-  const defaultButton =
-    'rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] md:text-sm text-white hover:shadow-md hover:shadow-blue-500/50 ';
-
-  const emojiStyle = 'text-xl md:text-2xl p-2 bg-pink-100 rounded-lg hover:bg-pink-200 cursor-pointer '
-
-  return (
-    <>
-      <div
-        className={
-          activeDialog
-            ? 'fixed top-0 left-0 right-0 bottom-0 flex items-center justify-center bg-black bg-opacity-50 '
-            : 'hidden'
-        }>
-        <div className="relative w-[15rem] md:w-[25rem] p-6 bg-white shadow-lg rounded-xl space-y-2">
-          <div className='flex items-center justify-between'>
-            <h4 className='text-sm md:text-base font-semibold'>Question*</h4>
-            <GrFormClose onClick={CloseDialog} className='cursor-pointer' />
-          </div>
-          <p>How would you rate this ui?*</p>
-          <div className='flex items-center justify-between'>
-            <span className={emojiStyle}>🥴</span>
-            <span className={emojiStyle}>😕</span>
-            <span className={emojiStyle}>🙃</span>
-            <span className={emojiStyle}>🙂</span>
-            <span className={emojiStyle}>😇</span>
-            <span className={emojiStyle}>😍</span>
-          </div>
-        </div>
-      </div>
-      <button onClick={dialog} className={defaultButton}>
-        Open Dialog
-      </button>
-    </>
-  );
+const dialog = () => {
+setActiveDialog(true);
 };
-```
+
+const CloseDialog = () => {
+setActiveDialog(false);
+};
+
+const defaultButton =
+'rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] md:text-sm text-white hover:shadow-md hover:shadow-blue-500/50 ';
+
+const emojiStyle = 'text-xl md:text-2xl p-2 bg-pink-100 rounded-lg hover:bg-pink-200 cursor-pointer '
+
+return (
+<>
+<div
+className={
+activeDialog
+? 'fixed top-0 left-0 right-0 bottom-0 flex items-center justify-center bg-black bg-opacity-50 '
+: 'hidden'
+}>
+<div className="relative w-[15rem] md:w-[25rem] p-6 bg-white shadow-lg rounded-xl space-y-2">
+<div className='flex items-center justify-between'>
+<h4 className='text-sm md:text-base font-semibold'>Question*</h4>
+<GrFormClose onClick={CloseDialog} className='cursor-pointer' />
+</div>
+<p>How would you rate this ui?*</p>
+<div className='flex items-center justify-between'>
+<span className={emojiStyle}>🥴</span>
+<span className={emojiStyle}>😕</span>
+<span className={emojiStyle}>🙃</span>
+<span className={emojiStyle}>🙂</span>
+<span className={emojiStyle}>😇</span>
+<span className={emojiStyle}>😍</span>
+</div>
+</div>
+</div>
+<button onClick={dialog} className={defaultButton}>
+Open Dialog
+</button>
+</>
+);
+};
+
+````
 </Code>
 
-<div id="typec" />
+<div id="type-c" />
 
 <ComponentExample
   name="Type C | Login"
@@ -276,6 +281,69 @@ export const TypeC = () => {
       </button>
     </>
   );
+};
+
+````
+
+</Code>
+
+<div id="type-d" />
+
+<ComponentExample
+  name="Type C | Scroll"
+  paragraph="Ranglar va ikonkalar ixtiyoriy! O'zingizga ma'qul rangni qo'llashingiz mumkin. Kodni olmoqchi bo'sangiz Show code tugmasini bosing">
+  <TypeD />
+</ComponentExample>
+
+<Code>
+```jsx
+import React, { useState } from 'react';
+import { GrFormClose } from 'react-icons/gr';
+
+export const TypeD = () => {
+  const [activeDialog, setActiveDialog] = useState(false);
+
+const dialog = () => {
+setActiveDialog(true);
+};
+
+const CloseDialog = () => {
+setActiveDialog(false);
+};
+
+const defaultButton =
+'rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] md:text-sm text-white hover:shadow-md hover:shadow-blue-500/50 ';
+
+return (
+<>
+<div
+className={
+activeDialog
+? 'fixed top-0 left-0 right-0 bottom-0 flex items-center justify-center bg-black bg-opacity-50 '
+: 'hidden'
+}>
+<div className="relative w-[90%] md:w-[35rem] lg:w-[45rem] h-[60%] md:h-[30rem] bg-white shadow-lg rounded-xl space-y-2 overflow-y-scroll">
+<div className="sticky z-20 top-0 left-0 right-0 flex items-center justify-between bg-white shadow-sm py-4 px-6">
+<h1 className="text-sm md:text-2xl font-semibold">Introduction</h1>
+<GrFormClose onClick={CloseDialog} className="cursor-pointer" />
+</div>
+<div className="py-2 px-6">
+<div>
+<h2 className="text-base md:text-lg font-semibold opacity-80">
+Your Heading.
+</h2>
+<p className="text-xs md:text-sm font-medium text-gray-500">
+Your paragraph.
+</p>
+</div>
+</div>
+</div>
+</div>
+<button onClick={dialog} className={defaultButton}>
+Open Dialog
+</button>
+</>
+);
 };
 
 ```
